hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__agent_status_missing_batch_displays_error.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 › /agents

 ✖ ⚠️  status_update: missing agent batch_id. tool=agent_status
   agents=orphan-agent

 • agents: running (1)  (Xs • esc to interrupt)

  What can I code for you today?


 Plan Mode  (Shift+Tab change)   ? for shortcuts                       API key
