hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__agents_terminal_overlay_full_details.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "&output"
---
 + Agents ------------------------------------------------------------------------------------+
 | Filter   1 All - 2 Running - 3 Failed - 4 Done - 5 Review               Sort: ( Recent ▼ ) |
 | +----------------------++----------------------------------------------------------------+ |
 | |Docs Sweep            || Docs Sweep / CLAUDE-3-Opus                                     | |
 | |› CLAUDE-3-Opus done  || Status: done Completed   Model: CLAUDE-3-Opus   ID: #docs-sw   | |
 | |  GPT-4o err          ||Batch: Batch batchdoc                                           | |
 | |                      ||                                                                | |
 | |                      ||+ Highlights (h) v --------------------------------------------+| |
 | |                      |||   • Final: ### Highlights - New Auto Drive controls - Faster  | |
 | |                      |||       release approvals                                       | |
 | |                      ||+---------------------------------------------------------------| |
 | |                      ||                                                                | |
 | |                      || Context                                                        | |
 | |                      ||   Focus on October 2025 product changes                        | |
 | |                      ||                                                                | |
 | |                      ||+ Action Log (a) v - 5 entries --------------------------------+| |
 | |                      |||   STATUS                                                      | |
 | |                      |||   MM:SS  Status → Running                                     | |
 | |                      |||   PROGRESS                                                    | |
 | |                      |||   MM:SS  Collecting release notes                             | |
 | |                      |||          Reviewing eng updates                                | |
 | |                      |||   STATUS                                                      | |
 | |                      |||   MM:SS  Status → Completed                                   | |
 | |                      |||   PROGRESS                                                    | |
 | |                      |||   MM:SS  Synthesizing highlights                              | |
 | |                      |||   RESULT                                                      | |
 | +----------------------++----------------------------------------------------------------+ |
 |      [↑/↓/←/→] Navigate   [1-5] Filter   [S] Sort   [H/A] Toggle Details   [X] Stop        |
 +--------------------------------------------------------------------------------------------+
