hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_cli_progress_header.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "frames.join(\"\\n---FRAME---\\n\")"
---

 I can help with various tasks including:

 - Writing code
 - Reading files
 - Running commands


  Auto Drive > Ready: run cargo check  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 |                                                                            |
 +----------------------------------------------------------------------------+
---FRAME---

 I can help with various tasks including:

 - Writing code
 - Reading files
 - Running commands


  Auto Drive > Running cargo check... · Installed dependencies  ✶ Thinking (Xs)
 +----------------------------------------------------------------------------+
 |                                                                            |
 +----------------------------------------------------------------------------+
---FRAME---

 I can help with various tasks including:

 - Writing code
 - Reading files
 - Running commands


  Auto Drive > Running cargo check... · Installed dependencies  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 |                                                                            |
 +----------------------------------------------------------------------------+
