hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_manual_mode_waits.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: frame
---
 What would you like to work on?


 Hello! How can I help you today?



 I can help with various tasks including:

 - Writing code
 - Reading files
 - Running commands


  Auto Drive > Auto Drive prepared to run justfile target  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 |                                                                            |
 +----------------------------------------------------------------------------+
