hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_review_footer_persists.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: frame
---
 What would you like to work on?


 Hello! How can I help you today?



 I can help with various tasks including:

 - Writing code
 - Reading files
 - Running commands


  Auto Drive > waiting for code review...  ✶ Awaiting review (Xs)
 +----------------------------------------------------------------------------+
 |                                                                            |
 +----------------------------------------------------------------------------+
