hanzo-dev/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_review_resume_returns_to_running.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 What would you like to work on?


 Hello! How can I help you today?



 I can help with various tasks including:

 - Writing code
 - Reading files
 - Running commands


  Auto Drive > <status redacted>                                 
 +----------------------------------------------------------------------------+
 |                                                                            |
 +----------------------------------------------------------------------------+
---FRAME---
 What would you like to work on?


 Hello! How can I help you today?



 I can help with various tasks including:

 - Writing code
 - Reading files
 - Running commands


  Auto Drive > <status redacted>                                 
 +----------------------------------------------------------------------------+
 |                                                                            |
 +----------------------------------------------------------------------------+
